--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 
 <body>
-  <div class="bg-gray-100 text-gray-800">
+  <div class="bg-gray-100 text-gray-800" x-data="{ selected: 'option-1' }">
     <nav class="bg-gray-300">
       <ul class="flex">
         <li class="px-4 py-2 bg-gray-100">
-          <a href="#option-1">Option 1</a>
+          <a href="#option-1" x-on:click="selected = 'option-1'">Option 1</a>
         </li>
         <li class="px-4 py-2">
-          <a href="#option-2">Option 2</a>
+          <a href="#option-2" x-on:click="selected = 'option-2'">Option 2</a>
         </li>
         <li class="px-4 py-2">
-          <a href="#option-3">Option 3</a>
+          <a href="#option-3" x-on:click="selected = 'option-3'">Option 3</a>
         </li>
       </ul>
     </nav>
 
-    <div class="p-4">
+    <div x-show="selected === 'option-1'" class="p-4">
       <h2 class="text-xl mb-4">Here, you have the content of <strong>Option 1</strong></h2>
       <p class="mb-2">Qui ipsorum lingua Celtae, nostra Galli appellantur. Quam diu etiam furor iste tuus nos eludet?
         Morbi fringilla
@@ -35,7 +35,7 @@
         vitiis, legem sancimus haerentia. Paullum deliquit, ponderibus modulisque suis ratio utitur.</p>
     </div>
 
-    <div class="p-4">
+    <div x-show="selected === 'option-2'" class="p-4">
       <h2 class="text-xl mb-4">Here, <strong>Option 2</strong> contents are shown</h2>
       <p class="mb-2">Qui ipsorum lingua Celtae, nostra Galli appellantur. Quam diu etiam furor iste tuus nos eludet?
         Morbi fringilla
@@ -46,7 +46,7 @@
         vitiis, legem sancimus haerentia. Paullum deliquit, ponderibus modulisque suis ratio utitur.</p>
     </div>
 
-    <div class="p-4">
+    <div x-show="selected === 'option-3'" class="p-4">
       <h2 class="text-xl mb-4">And here, only <strong>Option 3</strong> contents should be displayed</h2>
       <p>Qui ipsorum lingua Celtae, nostra Galli appellantur. Quam diu etiam furor iste tuus nos eludet? Morbi fringilla
         convallis sapien, id pulvinar odio volutpat.</p>
