Adds data binding to form

--- a/form.html
+++ b/form.html
@@ -10,23 +10,35 @@
 
 <body>
   <h1 class="text-center text-3xl font-bold mt-24 mb-6 uppercase">Contact</h1>
-  <form action="/contact" method="POST" class="w-64 mx-auto">
+  <form action="/contact" method="POST" class="w-64 mx-auto" x-data="contactForm()">
     <div class="mb-4">
       <label class="block mb-2">Name:</label>
-      <input type="text" name="name" class="border w-full p-1">
+      <input type="text" name="name" class="border w-full p-1" x-model="formData.name">
     </div>
 
     <div class="mb-4">
       <label class="block mb-2">E-mail:</label>
-      <input type="email" name="email" class="border w-full p-1">
+      <input type="email" name="email" class="border w-full p-1" x-model="formData.email">
     </div>
 
     <div class="mb-4">
       <label class="block mb-2">Message:</label>
-      <textarea name="message" class="border w-full p-1"></textarea>
+      <textarea name="message" class="border w-full p-1" x-model="formData.message"></textarea>
     </div>
     <button class="bg-gray-700 hover:bg-gray-800 text-white w-full p-2">Submit</button>
   </form>
+
+  <script>
+    function contactForm() {
+      return {
+        formData: {
+          name: '',
+          email: '',
+          message: ''
+        },
+      }
+    }
+  </script>
 </body>
 
 </html>
